--- a/static/css/partial/component/card.sass
+++ b/static/css/partial/component/card.sass
@@ -8,13 +8,30 @@
       display: block
 
   &-item
+    opacity: 1
+
     .thumbnail-wrapper
       width: 100%
       height: 10em
+      padding: 0
+      display: flex
+      justify-content: center
+      align-items: center
+      overflow: hidden
+      background: url('/static/images/background/thumbnail-pattern.png')
+      @include color-border('grey')
+      @include color-text('grey')
+
+      .thumbnail
+        width: 100%
+
+        &-default
+          font-size: 3rem
 
     .title
       font-size: 1rem
-      font-weight: 500
+      font-weight: 400
+      margin-block: .5em
 
     @media screen and (max-width: 768px)
       &:not(:last-child)
