--- a/static/css/partial/layout/header.sass
+++ b/static/css/partial/layout/header.sass
@@ -9,6 +9,7 @@ header
   display: flex
   justify-content: space-between
   align-items: center
+  z-index: 1
 
   .title
     @include font(site-title)
