--- a/static/css/partial/page/post-list.sass
+++ b/static/css/partial/page/post-list.sass
@@ -14,10 +14,9 @@
       @include color-text(secondary)
 
   .content-wrapper
-    border:
-      width: 0 1px
-      style: solid
     @include color-border('black', .05)
     @include color-background('white')
-    padding: 2em
+    padding: 3em 2em
+    border:
+      width: 0 1px
 
