--- a/static/css/partial/component/card.sass
+++ b/static/css/partial/component/card.sass
@@ -11,16 +11,17 @@
     opacity: 1
 
     .thumbnail-wrapper
-      width: 100%
-      height: 10em
-      padding: 0
+      height: 8em
+      padding: 1em
       display: flex
       justify-content: center
       align-items: center
       overflow: hidden
       background: url('/static/images/background/thumbnail-pattern.png')
-      @include color-border('grey')
-      @include color-text('grey')
+
+      $-color: 'grey'
+      @include color-border($-color)
+      @include color-text($-color)
 
       .thumbnail
         width: 100%
