--- a/static/css/partial/layout/header.sass
+++ b/static/css/partial/layout/header.sass
@@ -11,6 +11,9 @@ header
   align-items: center
   z-index: 1
 
+  @media screen and (max-width: 768px)
+    padding: .9em 8%
+
   .title
     @include font(site-title)
     color: inherit
