--- a/static/css/partial/page/post-list.sass
+++ b/static/css/partial/page/post-list.sass
@@ -16,7 +16,7 @@
   .content-wrapper
     @include color-border('black', .05)
     @include color-background('white')
-    padding: 3em 2em
+    padding: 2em
     border:
       width: 0 1px
 
