--- a/static/css/partial/base/color.sass
+++ b/static/css/partial/base/color.sass
@@ -1,4 +1,4 @@
-$_colors: ('white': #fff, 'black': #000, 'primary': #01213c, 'secondary': #DCA11D, 'accent': #364D6C, 'grey': #eee)
+$_colors: ('white': #fff, 'black': #000, 'primary': #01213c, 'secondary': #DCA11D, 'accent': #364D6C, 'danger': #C1554E,  'grey': #eee)
 
 @function getColor($name, $opacity: 1)
   $value: map-get($_colors, $name)
