--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -9,6 +9,8 @@
 
 @import 'layout/header';
 
+@import 'page/error';
 @import 'page/main';
 @import 'page/post-list';
-@import 'page/error';
+@import 'page/post-detail';
+
