--- a/_layouts/post-detail.html
+++ b/_layouts/post-detail.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <body>
-        <main>
+    {% include head.html %}
+
+    <body class="page-post-detail">
+        {% include layout/header.html %}
+
+        <main class="main">
+            <section class="content-wrapper">
+
+            </section>
         </main>
     </body>
 </html>
