--- a/_layouts/post-detail.html
+++ b/_layouts/post-detail.html
@@ -6,9 +6,13 @@
         {% include layout/header.html %}
 
         <main class="main">
-            <section class="content-wrapper">
+            <article class="content-wrapper">
+                <h2>{{ page.title }}</h2>
 
-            </section>
+                <div>
+                    {{ page.content }}
+                </div>
+            </article>
         </main>
     </body>
 </html>
