--- a/static/css/partial/page/post-list.sass
+++ b/static/css/partial/page/post-list.sass
@@ -9,3 +9,12 @@
     .post-count
       font-size: .9rem
       @include color-text(secondary)
+
+  .additional-info
+    &\:primary
+      font-size: .85rem
+      @include color-text('brown')
+
+    &\:secondary
+      font-size: .8rem
+      @include color-text('brown-lighten')
