--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -26,7 +26,7 @@
                             </div>
 
                             <div>
-                                <span class="additional-info:primary">{{ post.test }} ·</span>
+                                <span class="additional-info:primary">{{ post.sub_category }} ·</span>
                                 <span class="additional-info:secondary">{{ post.date | date: '%Y' }}</span>
                             </div>
                             <p class="title">{{ post.title }}</p>
