--- a/static/css/partial/component/button.sass
+++ b/static/css/partial/component/button.sass
@@ -5,8 +5,12 @@
   display: inline-block
   opacity: .8
 
-  &:hover, &.active
+  &:hover
     opacity: 1
+
+  &.active
+    opacity: 1
+    font-weight: 500
 
 .button
   &-outline
