--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,7 +10,7 @@
             </h1>
             <p class="description">{{ site.description }}</p>
 
-            {% include component/search-input.html %}
+            {% include component/search-input.html class="mt-10" %}
 
             <div class="mt-4">
                 {% assign categories = site.data.categories | split: ',' %}
