--- a/_includes/component/search-input.html
+++ b/_includes/component/search-input.html
@@ -1,4 +1,4 @@
-<form action="/search" class="mt-10 input-search-wrapper">
+<form action="/search" class="{{ include.class }} input-search-wrapper">
     <input type="text" name="keyword" class="input-search" />
     <i class="icon fas fa-search"></i>
 </form>
