--- a/static/css/partial/layout/page.sass
+++ b/static/css/partial/layout/page.sass
@@ -25,6 +25,15 @@
     border:
       width: 0 1px
 
+  .empty-post-guide
+    @include color-border('grey')
+    opacity: .5
+    text-align: center
+    border-width: 1px 0 0
+
+    .icon
+      font-size: 2.5rem
+
 
 @mixin page-full($h-align: center, $v-align: center)
   height: 100vh
