--- a/_includes/component/empty-post-guide.html
+++ b/_includes/component/empty-post-guide.html
@@ -1,6 +1,4 @@
-<div class="{{ include.class }} empty-post-guide" style="border-top: 1px solid #eee;opacity: .5;text-align: center">
-    <i class="fas fa-list icon" style="font-size: 2.5rem"></i>
-    <p class="message">
-        No match data
-    </p>
+<div class="{{ include.class }} empty-post-guide">
+    <i class="fas fa-list icon"></i>
+    <p>No match data</p>
 </div>
