--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -12,8 +12,9 @@
             </a>
         {% endfor %}
 
-        <a href="/search" class="button-text:white ml-4 {% if page.layout == search %}active{% endif %}">
-            <i class="fas fa-search"></i>
-        </a>
+        <!-- ToDO: search layout & header ui -->
+<!--        <a href="/search" class="button-text:white ml-4 {% if page.layout == search %}active{% endif %}">-->
+<!--            <i class="fas fa-search icon"></i>-->
+<!--        </a>-->
     </div>
 </header>
