--- a/static/css/partial/component/button.sass
+++ b/static/css/partial/component/button.sass
@@ -4,6 +4,8 @@
   text-decoration: none
   display: inline-block
   opacity: .8
+  background: transparent
+  border: none
 
   &:hover
     opacity: 1
