--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,39 @@
         {% if page.title %}&middot; {{ page.title }}{% endif %}
     </title>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon-16x16.png">
+    <link rel="manifest" href="/static/images/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c00">
+    <meta name="theme-color" content="#FFFFFF">
+
+
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/index.css">
+
+    {% assign og_image_url = page.thumbnail | default: '/static/images/apple-touch-icon.png' %}
+    {% unless og_image_url contains '://' %}
+        {% assign og_image_url = site.url | append: og_image_url %}
+    {% endunless %}
+    <meta name="og:image" content="{{ og_image_url }}"/>
+
+    <meta name="google-site-verification" content="e0ZWnkRm5aeF5hy4kOkDJfDZOC5Gmr5FYzgwyE2xN6k" />
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
+
+
+    {% if jekyll.environment == "production" %}
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?{{ site.ga-stream-id }}"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+
+            gtag('js', new Date());
+            gtag('config', '{{ site.ga-stream-id }}');
+
+            function gtag(){
+                dataLayer.push(arguments);
+            }
+        </script>
+    {% endif %}
 </head>
