--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -1,3 +1,3 @@
-<footer>
-    <p>footer</p>
+<footer class="footer">
+    <p class="copyright">&copy; 2022. coyobiii. all rights reserved.</p>
 </footer>
