--- a/static/css/partial/layout/page.sass
+++ b/static/css/partial/layout/page.sass
@@ -20,7 +20,7 @@
   .content-wrapper
     @include color-border('black', .05)
     @include color-background('white')
-    min-height: calc(100vh - 2.8em - 1.5rem)
+    min-height: calc(100vh - 2.8em - 1.5rem - 0.8rem - 3em - 3rem)
     padding: 2em
     border:
       width: 0 1px
