--- a/static/css/partial/layout/page.sass
+++ b/static/css/partial/layout/page.sass
@@ -15,7 +15,7 @@
   @extend %page
 
   .main
-    background: #f9f9f9
+    @include color-background('white-draken')
 
   .content-wrapper
     @include color-border('black', .05)
