--- a/_includes/component/empty-post-guide.html
+++ b/_includes/component/empty-post-guide.html
@@ -1,4 +1,4 @@
 <div class="{{ include.class }} empty-post-guide">
-    <i class="fas fa-list icon"></i>
-    <p>No match data</p>
+    <i class="fas fa-exclamation-circle icon"></i>
+    <p class="message">하나도 없다</p>
 </div>
