--- a/static/css/partial/base/color.sass
+++ b/static/css/partial/base/color.sass
@@ -1,9 +1,9 @@
 $_colors-brown: ('brown': #5A4317, 'brown-lighten': #B6A999)
-$_color-white: ('white': #fff, 'white-darken': '#f9f9f9')
+$_colors-white: ('white': #fff, 'white-darken': #f9f9f9)
 
 $_colors-default: ('black': #000, 'primary': #01213c, 'secondary': #DCA11D, 'accent': #364D6C, 'danger': #C1554E,  'grey': #eee)
 
-$_colors: map-merge($_colors-default, $_colors-brown, $_color-white)
+$_colors: map-merge($_colors-default, map-merge($_colors-white, $_colors-brown))
 
 @function getColor($name, $opacity: 1)
   $value: map-get($_colors, $name)
