--- a/static/css/partial/base/color.sass
+++ b/static/css/partial/base/color.sass
@@ -1,7 +1,7 @@
 $_colors-brown: ('brown': #5A4317, 'brown-lighten': #B6A999)
 $_colors-white: ('white': #fff, 'white-darken': #f9f9f9)
 
-$_colors-default: ('black': #000, 'primary': #01213c, 'secondary': #DCA11D, 'accent': #364D6C, 'danger': #C1554E,  'grey': #eee)
+$_colors-default: ('black': #000, 'primary': #01213c, 'secondary': #DCA11D, 'accent': #364D6C, 'danger': #C1554E,  'grey': #eee, 'yellow': #f49221)
 
 $_colors: map-merge($_colors-default, map-merge($_colors-white, $_colors-brown))
 
