--- a/_layouts/post-detail.html
+++ b/_layouts/post-detail.html
@@ -14,7 +14,7 @@ type: post-detail
         </div>
     </div>
 
-    <article class="my-10 post-contents {{ page.category }}">
+    <article class="mt-10 mb-12 post-contents {{ page.category }}">
         {{ page.content }}
     </article>
 
