--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -5,5 +5,63 @@ type: post-list
 
 <section class="content-wrapper">
     {% include component/search-input.html %}
-    {% include component/empty-post-guide.html class="mt-3 pt-10" %}
+
+    <section id="postSection"></section>
 </section>
+
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/gh/mindcloud92/dddd.static-search@f542b5b31a23cda9ad481c1022799a56f96d1798/src/static/js/dddd.static-search.min.js"></script>
+<script type="text/javascript">
+    window.onload = () => {
+        dddd.static.Search.renderResult({
+            data: getAllPost(),
+            renderOptions: {
+                dateFormat: 'yyyy'
+            }
+        })
+    }
+
+    function getAllPost () {
+        return [
+            {% for post in site.posts %}
+                {
+                    "title": "{{ post.title | xml_escape }}",
+                    "categories": ["{{ post.category }}"],
+                    "sub_category": ["{{ post.sub_category }}"],
+                    "content": {{ post.content | strip_html | strip_newlines | jsonify }},
+                    "tags": [{% for tag in post.tags %} "{{ tag }}" {% unless forloop.last %},{% endunless %} {% endfor %}],
+                    "date": "{{ post.date | date: '%FT%TZ' }}",
+                    "url": "{{ post.url | xml_escape | relative_url }}",
+                    "thumbnail": "{{ post.thumbnail | relative_url }}",
+                    "thumbnail_type": "{{ post.thumbnail_type | default: h-full }}"
+                }
+                {% unless forloop.last %},{% endunless %}
+            {% endfor %}
+        ]
+    }
+</script>
+<script id="template-post-list" type="text/template">
+    <% if (_.size(data) > 0) { %>
+        <div class="card-list mt-3">
+            <% _.each(data, (v, i) => { %>
+                <a href="<%= v.url %>" class="card-item button-text:black">
+                    <div class="thumbnail-wrapper mb-3">
+                        {% if v.thumbnail != '' %}
+                            <img src="<%= v.thumbnail %>" class="thumbnail <%= v.thumbnail_type %>" />
+                        {% else %}
+                            <i class="far fa-images thumbnail-default"></i>
+                        {% endif %}
+                    </div>
+
+                    <div>
+                        <span class="additional-info:primary"><%= v.sub_category %> ·</span>
+                        <span class="additional-info:secondary"><%= formatDate(v.date) %></span>
+                    </div>
+                    <p class="title"><%= v.title %></p>
+                </a>
+            <% }) %>
+        </div>
+    <% } else { %>
+        {% include component/empty-post-guide.html class="mt-3 pt-10" %}
+    <% } %>
+</script>
