--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,12 +28,12 @@
 
     {% if jekyll.environment == "production" %}
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?{{ site.ga-stream-id }}"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?{{ site.ga_stream_id }}"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
 
             gtag('js', new Date());
-            gtag('config', '{{ site.ga-stream-id }}');
+            gtag('config', '{{ site.ga_stream_id }}');
 
             function gtag(){
                 dataLayer.push(arguments);
