--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -3,6 +3,28 @@ layout: default
 type: post-list
 ---
 
+{% assign posts = '' | split: ',' %}
+{% for post in site.posts %}
+    {% capture v %}
+        "title": "{{ post.title | xml_escape }}",
+        "categories": ["{{ post.category }}"],
+        "sub_category": ["{{ post.sub_category }}"],
+        "content": {{ post.content | strip_html | strip_newlines | jsonify }},
+        "tags": [{% for tag in post.tags %} "{{ tag }}" {% unless forloop.last %},{% endunless %} {% endfor %}],
+        "date": "{{ post.date | date: '%FT%TZ' }}",
+        "url": "{{ post.url | xml_escape | relative_url }}",
+        "thumbnail": "{{ post.thumbnail | relative_url }}",
+        "thumbnail_type": "{{ post.thumbnail_type | default: h-full }}"
+    {% endcapture %}
+
+    {% assign v = v | prepend: '{' | append: '}' | strip_newlines %}
+    {% unless forloop.last %}
+        {% assign v = v | append: ', ' %}
+    {% endunless %}
+
+    {% assign posts = posts | push: v %}
+{% endfor %}
+
 <section class="content-wrapper">
     {% include component/search-input.html %}
 
@@ -14,30 +36,11 @@ type: post-list
 <script type="text/javascript">
     window.onload = () => {
         dddd.static.Search.renderResult({
-            data: getAllPost(),
+            data: JSON.parse('[{{ posts }}]'),
             renderOptions: {
                 dateFormat: 'yyyy'
             }
         })
-    }
-
-    function getAllPost () {
-        return [
-            {% for post in site.posts %}
-                {
-                    "title": "{{ post.title | xml_escape }}",
-                    "categories": ["{{ post.category }}"],
-                    "sub_category": ["{{ post.sub_category }}"],
-                    "content": {{ post.content | strip_html | strip_newlines | jsonify }},
-                    "tags": [{% for tag in post.tags %} "{{ tag }}" {% unless forloop.last %},{% endunless %} {% endfor %}],
-                    "date": "{{ post.date | date: '%FT%TZ' }}",
-                    "url": "{{ post.url | xml_escape | relative_url }}",
-                    "thumbnail": "{{ post.thumbnail | relative_url }}",
-                    "thumbnail_type": "{{ post.thumbnail_type | default: h-full }}"
-                }
-                {% unless forloop.last %},{% endunless %}
-            {% endfor %}
-        ]
     }
 </script>
 <script id="template-post-list" type="text/template">
