--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
     {% include head.html %}
 
-    <body class="page-main" >
+    <body class="page main" >
         <main class="main">
             <h1 class="title">
                 {{ site.title }}
