--- a/static/css/partial/layout/header.sass
+++ b/static/css/partial/layout/header.sass
@@ -28,7 +28,7 @@
 @media screen and (max-width: 768px)
   .header
     .content
-      padding: .9em 1.6em
+      padding: .9em 8%
 
     .mobile
       display: block
