--- a/static/css/partial/layout/page.sass
+++ b/static/css/partial/layout/page.sass
@@ -50,7 +50,7 @@
 
     &\:secondary
       font-size: .8rem
-      @include color-text('brown-lighten')
+      @include color-text('brown-lighten-2')
 
 
 
