--- a/static/css/partial/page/post-detail.sass
+++ b/static/css/partial/page/post-detail.sass
@@ -6,17 +6,6 @@
   .tag-container
     font-size: .9rem
 
-  .category-badge
-    margin-block: 0
-    padding: 0.25em .8em
-    display: inline-block
-    font:
-      size: .8rem
-      weight: 600
-    @include color-background('secondary')
-    @include color-text('white-darken')
-
-
   .post-header
     text-align: center
 
@@ -46,17 +35,8 @@
       border: 1px solid #eee
       border-radius: 5px
 
-    .step-badge
-      font-style: normal
-      border-radius: 5px
-      padding: .2em .5em
-      background: #AC7D7C
-      font-size: .9rem
-      color: #eee
-
-
     a
-      color: #007FA6
+      color: #5BB5DF
       text-decoration: none
 
     .info-message
@@ -76,7 +56,7 @@
         justify-content: center
 
         .thumbnail
-          width: 30%
+          height: 18em
 
       .rating-container
         text-align: center
