--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -6,6 +6,7 @@
 @import 'component/input';
 @import 'component/logo';
 @import 'component/card';
+@import 'component/badge';
 
 @import 'layout/header';
 @import 'layout/footer';
