--- a/static/css/partial/base/color.sass
+++ b/static/css/partial/base/color.sass
@@ -1,4 +1,4 @@
-$_colors-brown: ('brown': #5A4317, 'brown-lighten': #B6A999)
+$_colors-brown: ('brown': #5A4317, 'brown-lighten-1': #996E43, 'brown-lighten-2': #B6A999)
 $_colors-white: ('white': #fff, 'white-darken': #f9f9f9)
 
 $_colors-default: ('black': #000, 'primary': #01213c, 'secondary': #DCA11D, 'accent': #364D6C, 'danger': #C1554E,  'grey': #eee, 'yellow': #f49221)
