--- a/static/css/partial/component/badge.sass
+++ b/static/css/partial/component/badge.sass
@@ -8,7 +8,7 @@
     size: .8rem
     weight: 600
   @include color-background('secondary')
-  @include color-text('white-darken')
+  @include color-text('white-darken-1')
 
 .step-badge
   font-style: normal
