--- a/static/css/partial/layout/page.sass
+++ b/static/css/partial/layout/page.sass
@@ -16,7 +16,7 @@
   @extend %page
 
   .main
-    @include color-background('white-darken')
+    @include color-background('white-darken-1')
 
   .content-wrapper
     @include color-border('black', .05)
