--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -7,6 +7,8 @@
 @import 'component/logo';
 @import 'component/card';
 @import 'component/badge';
+@import 'component/code-block';
+@import 'component/icon';
 
 @import 'layout/header';
 @import 'layout/footer';
