--- a/static/css/partial/base/font.sass
+++ b/static/css/partial/base/font.sass
@@ -13,6 +13,9 @@ $_font-default-900: (name: 'default', source-url: '//cdn.jsdelivr.net/gh/Project
 $_font-site-title: (name: 'site-title', source-url: '//cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24SsurroundAir.woff')
 $_font-site-description: (name: 'site-description', source-url: '//cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Oneprettynight.woff')
 $_font-message: (name: 'message', source-url: '//cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2112-2@1.0/ACCchildrenheartOTF-Regular.woff')
+$_font-code-block: 'Consolas'
+$_font-icon-default: 'Font Awesome 5 Free'
+
 
 $_fonts: (default-regular: $_font-default-regular, default-500: $_font-default-500, default-600: $_font-default-600, default-900: $_font-default-900, site-title: $_font-site-title, site-description: $_font-site-description, message: $_font-message)
 
