--- a/static/css/partial/page/post-detail.sass
+++ b/static/css/partial/page/post-detail.sass
@@ -12,43 +12,25 @@
   .post-contents
     line-height: 2.2
 
-    // ToDO: component 옮기기
-    code
-      font-family: 'Consolas'
-
-    .highlighter-rouge
-      background: #1f1f1f
-      color: #dadcf3
-      font-size: .9rem
-      padding: .5em 1em
-
-    .language-plaintext
-      background: #f5f5f5
-      padding: .4em .6em
-      color: #c3281d
-      font-size: .9rem
-      border-radius: 5px
-
     img
       max-width: 100%
       max-height: 18em
-      border: 1px solid #eee
-      border-radius: 5px
+      @include color-border('grey')
 
     a
-      color: #5BB5DF
+      @include color-text('link')
       text-decoration: none
+
+      &:hover
+        text-decoration: underline
 
     .info-message
       font-size: .9rem
-      color: #7c7b7b
+      @include color-text('black-lighten-1', .65)
 
       &:before
-        content: '\f05a'
-        font-family: 'Font Awesome 5 Free'
-        font-weight: bold
+        @include icon('info')
         margin-right: .5em
-    // ToDO: component 옮기기
 
     &.review
       .thumbnail-wrapper
