--- a/static/css/partial/component/icon.sass
+++ b/static/css/partial/component/icon.sass
@@ -1,6 +1,6 @@
 @import 'base'
 
-$_icon-contents: ('info': '\f05a')
+$_icon-contents: ('info': '\f05a', 'link': '\f0c1', 'book-mark': '\f02e')
 
 @mixin icon($name)
   content: map-get($_icon-contents, $name)
