--- a/static/css/partial/page/post-detail.sass
+++ b/static/css/partial/page/post-detail.sass
@@ -14,7 +14,7 @@
 
     img
       max-width: 100%
-      max-height: 18em
+      max-height: 20em
       @include color-border('grey')
 
     a
@@ -31,6 +31,23 @@
       &:before
         @include icon('info')
         margin-right: .5em
+
+    .reference-wrapper
+      padding: 1em 1.5em
+      @include color-background('secondary', .1)
+      @include color-border('secondary')
+      @include color-text('black-lighten-1', .7)
+      border-width: 0 0 0 5px
+      font-weight: 600
+
+      p, ul
+        margin-block: 0
+
+      p
+        &:before
+          @include icon('link')
+          margin-right: .5em
+
 
     &.review
       .thumbnail-wrapper
