--- a/static/css/partial/base/color.sass
+++ b/static/css/partial/base/color.sass
@@ -2,7 +2,7 @@ $_colors-brown: ('brown': #5A4317, 'brown-lighten-1': #996E43, 'brown-lighten-2'
 $_colors-white: ('white': #fff, 'white-darken-1': #f9f9f9, 'white-darken-2': #f5f5f5, 'white-darken-3': #dadcf3)
 $_colors-black: ('black': #000, 'black-lighten-1': #1f1f1f)
 
-$_colors-default: ('primary': #01213c, 'secondary': #DCA11D, 'accent': #364D6C, 'danger': #C1554E,  'grey': #eee, 'yellow': #f49221, 'link': #5BB5DF)
+$_colors-default: ('primary': #01213c, 'secondary': #DCA11D, 'accent': #364D6C, 'danger': #C1554E,  'grey': #eee, 'yellow': #f49221, 'link': #279bde)
 
 $_colors: map-merge(map-merge($_colors-default, $_colors-black), map-merge($_colors-white, $_colors-brown))
 
