--- a/static/css/partial/base/font.sass
+++ b/static/css/partial/base/font.sass
@@ -6,13 +6,13 @@
   @return $value
 
 
-$_font-default-regular: (name: 'default', source-url: '//cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff')
-$_font-default-500: (name: 'default', source-url: '//cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff', weight: 500)
-$_font-default-600: (name: 'default', source-url: '//cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff', weight: 600)
-$_font-default-900: (name: 'default', source-url: '//cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff', weight: 900)
-$_font-site-title: (name: 'site-title', source-url: '//cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24SsurroundAir.woff')
-$_font-site-description: (name: 'site-description', source-url: '//cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Oneprettynight.woff')
-$_font-message: (name: 'message', source-url: '//cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2112-2@1.0/ACCchildrenheartOTF-Regular.woff')
+$_font-default-regular: (name: 'default', source-url: '/static/font/Pretendard-Regular.woff')
+$_font-default-500: (name: 'default', source-url: '/static/font/Pretendard-Medium.woff', weight: 500)
+$_font-default-600: (name: 'default', source-url: '/static/font/Pretendard-SemiBold.woff', weight: 600)
+$_font-default-900: (name: 'default', source-url: '/static/font/Pretendard-Bold.woff', weight: 900)
+$_font-site-title: (name: 'site-title', source-url: '/static/font/Cafe24SsurroundAir.woff')
+$_font-site-description: (name: 'site-description', source-url: '/static/font/Cafe24Oneprettynight.woff')
+$_font-message: (name: 'message', source-url: '/static/font/ACCchildrenheartOTF-Regular.woff')
 $_font-code-block: 'Consolas'
 $_font-icon-default: 'Font Awesome 5 Free'
 
