--- a/static/css/partial/page/post-detail.sass
+++ b/static/css/partial/page/post-detail.sass
@@ -24,6 +24,13 @@
       &:hover
         text-decoration: underline
 
+    p, ul
+      font-size: .95rem
+
+    hr
+      @include color-border('grey')
+      border-style: dashed
+
     .info-message
       font-size: .9rem
       @include color-text('black-lighten-1', .65)
@@ -32,21 +39,21 @@
         @include icon('info')
         margin-right: .5em
 
-    .reference-wrapper
-      padding: 1em 1.5em
-      @include color-background('secondary', .1)
-      @include color-border('secondary')
-      @include color-text('black-lighten-1', .9)
-      border-width: 0 0 0 5px
-      font-weight: 600
-
-      p, ul
-        margin-block: 0
-
-      p
-        &:before
-          @include icon('link')
-          margin-right: .5em
+    //.warning-wrapper
+    //  padding: 1em 1.5em
+    //  @include color-background('secondary', .1)
+    //  @include color-border('secondary')
+    //  @include color-text('black-lighten-1', .9)
+    //  border-width: 0 0 0 5px
+    //  font-weight: 600
+    //
+    //  p, ul
+    //    margin-block: 0
+    //
+    //  p
+    //    &:before
+    //      @include icon('link')
+    //      margin-right: .5em
 
 
     &.review
