--- a/static/css/partial/page/post-detail.sass
+++ b/static/css/partial/page/post-detail.sass
@@ -39,21 +39,13 @@
         @include icon('info')
         margin-right: .5em
 
-    //.warning-wrapper
-    //  padding: 1em 1.5em
-    //  @include color-background('secondary', .1)
-    //  @include color-border('secondary')
-    //  @include color-text('black-lighten-1', .9)
-    //  border-width: 0 0 0 5px
-    //  font-weight: 600
-    //
-    //  p, ul
-    //    margin-block: 0
-    //
-    //  p
-    //    &:before
-    //      @include icon('link')
-    //      margin-right: .5em
+    .info-wrapper
+      padding: 1em 1.5em
+      @include color-background('secondary', .1)
+      @include color-border('secondary')
+      @include color-text('brown', .9)
+      border-width: 0 0 0 5px
+      font-size: .9rem
 
 
     &.review
